Fix Sonar, mutation testing, and Mongo cleanup